tests/errors/pat_or_var_incompatible_ty_err/pat_or_var_incompatible_ty_err.c
#error pat_or_var_incompatible_ty_err:10:3 OR pattern including some binding is unimplemented
